// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThumbnailSelector it renders 1`] = `
<View
  collapsable={false}
  onLayout={[Function]}
  style={
    {
      "elevation": 1,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": [
        {
          "translateY": 1334,
        },
      ],
      "zIndex": 1,
    }
  }
  testID="ThumbnailSelector"
>
  <RCTScrollView
    data={
      [
        {
          "caption": "react-native",
          "imageSrc": {
            "uri": "https://reactnative.dev/img/tiny_logo.png",
          },
        },
        {
          "caption": "New York City",
          "imageSrc": {
            "uri": "https://reactnative.dev/img/tiny_logo.png",
          },
        },
        {
          "caption": "Elit cupidatat qui ea deserunt reprehenderit sit velit eu aliqua incididunt sit elit reprehenderit.",
          "imageSrc": {
            "uri": "https://reactnative.dev/img/tiny_logo.png",
          },
        },
        {
          "imageSrc": {
            "uri": "https://reactnative.dev/img/tiny_logo.png",
          },
        },
      ]
    }
    extraData={2}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    initialNumToRender={4}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
    style={
      {
        "backgroundColor": "grey",
        "padding": 8,
      }
    }
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 8,
            }
          }
        >
          <Image
            source={
              {
                "uri": "https://reactnative.dev/img/tiny_logo.png",
              }
            }
            style={
              [
                {
                  "borderColor": "black",
                },
                {
                  "borderWidth": 1,
                  "height": 136,
                  "width": 136,
                },
              ]
            }
          />
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "black",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
          >
            react-native
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 8,
            }
          }
        >
          <Image
            source={
              {
                "uri": "https://reactnative.dev/img/tiny_logo.png",
              }
            }
            style={
              [
                {
                  "borderColor": "black",
                },
                {
                  "borderWidth": 1,
                  "height": 136,
                  "width": 136,
                },
              ]
            }
          />
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "black",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
          >
            New York City
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 8,
            }
          }
        >
          <Image
            source={
              {
                "uri": "https://reactnative.dev/img/tiny_logo.png",
              }
            }
            style={
              [
                {
                  "borderColor": "white",
                },
                {
                  "borderWidth": 1,
                  "height": 136,
                  "width": 136,
                },
              ]
            }
          />
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "white",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
          >
            Elit cupidat...
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 8,
            }
          }
        >
          <Image
            source={
              {
                "uri": "https://reactnative.dev/img/tiny_logo.png",
              }
            }
            style={
              [
                {
                  "borderColor": "black",
                },
                {
                  "borderWidth": 1,
                  "height": 136,
                  "width": 136,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`ThumbnailSelector no thumbnails 1`] = `
<View
  collapsable={false}
  onLayout={[Function]}
  style={
    {
      "elevation": 1,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": [
        {
          "translateY": 1334,
        },
      ],
      "zIndex": 1,
    }
  }
  testID="ThumbnailSelector"
>
  <RCTScrollView
    data={[]}
    extraData={-1}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    initialNumToRender={0}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
    style={
      {
        "backgroundColor": "grey",
        "padding": 8,
      }
    }
    viewabilityConfigCallbackPairs={[]}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`ThumbnailSelector onSelect prop 1`] = `
<View
  collapsable={false}
  onLayout={[Function]}
  style={
    {
      "elevation": 1,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": [
        {
          "translateY": 1334,
        },
      ],
      "zIndex": 1,
    }
  }
  testID="ThumbnailSelector"
>
  <RCTScrollView
    data={
      [
        {
          "caption": "react-native",
          "imageSrc": {
            "uri": "https://reactnative.dev/img/tiny_logo.png",
          },
        },
        {
          "caption": "New York City",
          "imageSrc": {
            "uri": "https://reactnative.dev/img/tiny_logo.png",
          },
        },
        {
          "caption": "Elit cupidatat qui ea deserunt reprehenderit sit velit eu aliqua incididunt sit elit reprehenderit.",
          "imageSrc": {
            "uri": "https://reactnative.dev/img/tiny_logo.png",
          },
        },
        {
          "imageSrc": {
            "uri": "https://reactnative.dev/img/tiny_logo.png",
          },
        },
      ]
    }
    extraData={2}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    initialNumToRender={4}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
    style={
      {
        "backgroundColor": "grey",
        "padding": 8,
      }
    }
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 8,
            }
          }
        >
          <Image
            source={
              {
                "uri": "https://reactnative.dev/img/tiny_logo.png",
              }
            }
            style={
              [
                {
                  "borderColor": "black",
                },
                {
                  "borderWidth": 1,
                  "height": 136,
                  "width": 136,
                },
              ]
            }
          />
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "black",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
          >
            react-native
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 8,
            }
          }
        >
          <Image
            source={
              {
                "uri": "https://reactnative.dev/img/tiny_logo.png",
              }
            }
            style={
              [
                {
                  "borderColor": "black",
                },
                {
                  "borderWidth": 1,
                  "height": 136,
                  "width": 136,
                },
              ]
            }
          />
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "black",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
          >
            New York City
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 8,
            }
          }
        >
          <Image
            source={
              {
                "uri": "https://reactnative.dev/img/tiny_logo.png",
              }
            }
            style={
              [
                {
                  "borderColor": "white",
                },
                {
                  "borderWidth": 1,
                  "height": 136,
                  "width": 136,
                },
              ]
            }
          />
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "white",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
          >
            Elit cupidat...
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 8,
            }
          }
        >
          <Image
            source={
              {
                "uri": "https://reactnative.dev/img/tiny_logo.png",
              }
            }
            style={
              [
                {
                  "borderColor": "black",
                },
                {
                  "borderWidth": 1,
                  "height": 136,
                  "width": 136,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
